# libnativehelper

./: CMakeLists.txt  build.sh  jvm_compat_log.h
android/: log.c  log.h
